--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,38 +1,27 @@
+@use '../Styles/Reset.scss';
+@use '../Styles/mixins' as m;
+@use '../Styles/variables' as v;
+
+body {
+  background-color: v.$offWhite;
+  height: 100vh;
+}
+
 .App {
-  text-align: center;
+  font-family: v.$bodyFont;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2, h3, h4 {
+  font-family: v.$headerFont;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+  margin: 0.5em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
+a:focus { text-decoration: none; }
