--- a/src/Components/Styles/_variables.scss
+++ b/src/Components/Styles/_variables.scss
@@ -5,9 +5,9 @@ $bodyFont: 'Thasadith', sans-serif;
 // Colors
 $offWhite: #F2F2F2;
 $offBlack: #020202;
-$darkTeal -#03738C;
+$darkTeal: #03738C;
 $orange: #F28F38;
-$darkBlue: #0D2C40:
+$darkBlue: #0D2C40;
 $lightTeal: #049CBE;
 $salmon: #D95A4E;
 $lightGray: #E2E2E2;
