--- a/src/Components/Styles/_mixins.scss
+++ b/src/Components/Styles/_mixins.scss
@@ -25,9 +25,11 @@
   border: none;
   border-radius: 0.5em;
   box-shadow: 2px 3px 6px 3px #6b6b6b;
+  text-align: center;
 }
 
 @mixin buttonHover() {
   cursor: pointer;
   transform: scale(1.08);
+  font-size: 3em;
 }
