--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -20,6 +20,14 @@ h2 {
   font-size: 2em;
 }
 
+h3 {
+  font-size: 1.2em;
+}
+
+h4 {
+  font-size: 1em;
+}
+
 p {
   margin: 0.5em 0;
   color: v.$darkBlue;
