Update MilkRequestForm component styling

--- a/src/Components/Styles/_variables.scss
+++ b/src/Components/Styles/_variables.scss
@@ -10,4 +10,5 @@ $orange: #F28F38;
 $darkBlue: #0D2C40;
 $lightTeal: #049CBE;
 $salmon: #D95A4E;
-$lightGray: #E2E2E2;
+$lightGray: #d5d5d5;
+$mediumGray: #7B7B7B;
