--- a/src/Components/Styles/_mixins.scss
+++ b/src/Components/Styles/_mixins.scss
@@ -33,3 +33,16 @@
   transform: scale(1.08);
   font-size: 3em;
 }
+
+@mixin button($backgroundColor, $textColor, $font) {
+  background-color: $backgroundColor;
+  color: $textColor;
+  font-family: $font;
+  font-size: 1.2em;
+  font-weight: 600;
+  border: none;
+  border-radius: 1.5em;
+  box-shadow: 2px 3px 6px 3px #6b6b6b;
+  text-align: center;
+  padding: 1%;
+}
