--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -1,5 +1,5 @@
-@use '../Styles/mixins' as m;
-@use '../Styles/variables' as v;
+@use "../Styles/mixins" as m;
+@use "../Styles/variables" as v;
 
 .main-container {
   margin: 5% 10%;
@@ -15,11 +15,7 @@
   }
 
   .buttons {
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
+    @include m.flexbox(row, wrap, center, center, center); 
     
     .need, .donate {
       width: 44%;
@@ -43,9 +39,11 @@
       padding: 5%;
     }
 
-    .need, .donate, .support {
+    .need,
+    .donate,
+    .support {
       &:hover {
-        @include m.buttonHover(3em)
+        @include m.buttonHover(3em);
       }
     }
   }
