--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -4,13 +4,13 @@
 
 body {
   background-color: v.$offWhite;
-  height: 100vh;
+  // height: 100vh;
 }
 
 .App {
   font-family: v.$bodyFont;
   width: 100%;
-  height: 100vh;
+  // height: 100vh;
 }
 
 h1, h2, h3, h4 {
