Add media queries to mobile buttons on home page

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -63,7 +63,13 @@ header {
   */
 
   @media (min-width: 768px) and (max-width: 1024px) {
+    flex-direction: column;
 
+    nav {
+      .menu {
+        flex-wrap: wrap;
+      }
+    }
   }
 
   /*
@@ -81,7 +87,13 @@ header {
   */
 
   @media (min-width: 481px) and (max-width: 767px) {
+    flex-direction: column;
 
+    nav {
+      .menu {
+        flex-wrap: wrap;
+      }
+    }
   }
 
   /*
@@ -90,6 +102,12 @@ header {
   */
 
   @media (min-width: 320px) and (max-width: 480px) {
+    flex-direction: column;
 
+    nav {
+      .menu {
+        flex-wrap: wrap;
+      }
+    }
   }
 }
