Update milk form for tablet and mobile view

--- a/src/Components/SupportLink/SupportLink.scss
+++ b/src/Components/SupportLink/SupportLink.scss
@@ -2,15 +2,14 @@
 @use '../Styles/variables' as v;
 
 .support-links {
-  display: flex;
-  flex-wrap: wrap;
+  @include m.flexbox(row, wrap, normal, center, normal);
   margin: 5% 2% 20% 2%;
   padding-bottom: 25%;
 
   .support-button {
     display: block;
-    height: 200px;
-    width: 200px;
+    height: 10em;
+    width: 10em;
     border-radius: 50%;
     margin: 1%;
     padding: 2%;
@@ -25,5 +24,44 @@
     &:hover {
       @include m.buttonHover(1.2em)
     }
+  }
+}
+
+/*
+##Device = Tablets, Ipads (portrait)
+##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+
+}
+
+/*
+##Device = Tablets, Ipads (landscape)
+##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+
+}
+
+/*
+##Device = Low Resolution Tablets, Mobiles (Landscape)
+##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+
+}
+
+/*
+##Device = Most of the Smartphones Mobiles (Portrait)
+##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .support-links .support-button {
+      height: 8em;
+      width: 8em;
   }
 }
