--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -61,6 +61,10 @@
 */
 
 @media (min-width: 768px) and (max-width: 1024px) {
+  .donate {
+    height: auto;
+  }
+
   .columns {
     @include m.flexbox(row, wrap, flex-start, center, normal); 
 
