Hide desktop menu on mobile view

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -64,10 +64,15 @@ header {
 
   @media (min-width: 768px) and (max-width: 1024px) {
     flex-direction: column;
+    align-items: flex-start;
 
     nav {
       .menu {
         flex-wrap: wrap;
+      }
+
+      .mobile-hidden {
+        display: none;
       }
     }
   }
@@ -79,10 +84,15 @@ header {
 
   @media (min-width: 481px) and (max-width: 767px) {
     flex-direction: column;
+    align-items: flex-start;
 
     nav {
       .menu {
         flex-wrap: wrap;
+      }
+
+      .mobile-hidden {
+        display: none;
       }
     }
   }
@@ -94,10 +104,15 @@ header {
 
   @media (min-width: 320px) and (max-width: 480px) {
     flex-direction: column;
+    align-items: flex-start;
 
     nav {
       .menu {
         flex-wrap: wrap;
+      }
+
+      .mobile-hidden {
+        display: none;
       }
     }
   }
