--- a/src/Components/DonateMilkForm/DonateMilkForm.scss
+++ b/src/Components/DonateMilkForm/DonateMilkForm.scss
@@ -3,7 +3,16 @@
 
 .donor-form {
   p {
+    color: v.$orange;
+    font-style: italic;
+    font-size: 1em !important;
+  }
+
+  .form-question {
+    color: v.$offBlack;
     margin: 2% 0 0 0;
+    font-style: normal;
+    font-size: 1.2em !important;
   }
 
   .form-group {
