--- a/src/Components/MilkRequestForm/MilkRequestForm.scss
+++ b/src/Components/MilkRequestForm/MilkRequestForm.scss
@@ -10,6 +10,12 @@
     font-size: 1.2em;
   }
 
+  .error {
+    color: v.$orange;
+    font-style: italic;
+    font-size: 1em;
+  }
+
   form {
     margin: 1% 0;
     display: flex;
