--- a/src/Components/MilkRequestForm/MilkRequestForm.scss
+++ b/src/Components/MilkRequestForm/MilkRequestForm.scss
@@ -48,6 +48,7 @@
 
     .button {
       @include m.button(v.$orange, v.$offBlack, v.$bodyFont);
+      @include m.buttonShadow();
       margin: 4% 0 4% 60%;
 
       &:hover {
