--- a/src/Components/DonorCard/DonorCard.scss
+++ b/src/Components/DonorCard/DonorCard.scss
@@ -11,6 +11,6 @@
     background-color: v.$orange;
     padding: 10%;
     border-radius: 1.5em;
-    box-shadow: 2px 3px 6px 3px #6b6b6b;
+    @include m.buttonShadow();
   }
 }
