Style profile page for mobile

--- a/src/Components/About/ProfilePage/Profile.scss
+++ b/src/Components/About/ProfilePage/Profile.scss
@@ -41,3 +41,14 @@
     }
   }
 }
+
+
+@media (min-width: 320px) and (max-width: 1024px) {
+  .main-container {
+    .team-grid {
+      .team-member {
+        grid-template-columns: 1fr;
+      }
+    }
+  }
+}
