--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -106,6 +106,14 @@ header {
     flex-direction: column;
     align-items: flex-start;
 
+    header {
+      .logo {
+        h1 {
+          font-size: 1em;
+        }
+      }
+    }
+
     nav {
       .menu {
         flex-wrap: wrap;
