--- a/src/Components/About/ProfilePage/Profile.scss
+++ b/src/Components/About/ProfilePage/Profile.scss
@@ -2,12 +2,12 @@
 @use '../../Styles/variables' as v;
 
 .team-grid {
-  
+  height: 100vh;
+
   .team-member {
     display: grid;
     grid-template-columns: 40% 60%;
-    grid-gap: 2em;
-    
+
     .col-1 {
       @include m.flexbox(column, wrap, normal, center, center);
    
@@ -51,6 +51,8 @@
 @media (min-width: 320px) and (max-width: 1024px) {
   .main-container {
     .team-grid {
+      height: 100%;
+      
       .team-member {
         grid-template-columns: 1fr;
       }
