--- a/src/Components/About/ProfilePage/Profile.scss
+++ b/src/Components/About/ProfilePage/Profile.scss
@@ -48,14 +48,14 @@
 }
 
 
-@media (min-width: 320px) and (max-width: 1024px) {
-  .main-container {
-    .team-grid {
-      height: 100%;
-      
-      .team-member {
-        grid-template-columns: 1fr;
-      }
-    }
-  }
-}
+// @media (min-width: 320px) and (max-width: 1024px) {
+//   .main-container {
+//     .team-grid {
+//       height: 100%;
+
+//       // .team-member {
+//       //   grid-template-columns: 1fr;
+//       // }
+//     }
+//   }
+// }
