--- a/src/Components/DonorCard/DonorCard.scss
+++ b/src/Components/DonorCard/DonorCard.scss
@@ -16,17 +16,13 @@
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .team-container {
-    .team-grid {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
+  .contact-grid {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
-  .team-container {
-    .team-grid {
-      grid-template-columns: 1fr;
-    }
+  .contact-grid {
+    grid-template-columns: 1fr;
   }
 }
