Tweak forms and sass for accessibility audit

--- a/src/Components/About/ProfilePage/Profile.scss
+++ b/src/Components/About/ProfilePage/Profile.scss
@@ -46,3 +46,20 @@
     }
   }
 }
+
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .team-grid {
+    .team-member {
+      grid-template-columns: 1fr;
+    }
+  }
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .team-grid {
+    .team-member {
+      grid-template-columns: 1fr;
+    }
+  }
+}
