--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -56,10 +56,7 @@ hr.dots {
 
 a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
-a:hover { 
-  text-decoration: none; 
-  cursor: pointer;
-}
+a:hover { text-decoration: none; }
 a:active { text-decoration: none; }
 a:focus { text-decoration: none; }
 
