--- a/src/Components/MobileMenu/MobileMenu.scss
+++ b/src/Components/MobileMenu/MobileMenu.scss
@@ -3,7 +3,7 @@
 
 /* Position and sizing of burger button */
 .bm-burger-button {
-  position: fixed;
+  position: absolute;
   width: 36px;
   height: 30px;
   right: 36px;
@@ -22,8 +22,8 @@
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
-  height: 24px;
-  width: 24px;
+  height: 3em !important;
+  width: 3em !important;
 }
 
 /* Color/shape of close button cross */
