--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -3,6 +3,12 @@
 
 .main-container {
   margin: 5% 10%;
+
+  .error-loading {
+    display: flex;
+    justify-content: center;
+    margin: 5%;
+  }
 }
 
 .home, .message {
