--- a/src/Components/MilkRequestForm/MilkRequestForm.scss
+++ b/src/Components/MilkRequestForm/MilkRequestForm.scss
@@ -6,8 +6,11 @@
     color: v.$salmon;
   }
 
-  .bold {
+  .donor-error {
     color: v.$salmon;
+    height: 100vh;
+    font-size: 3em;
+    // margin: 5%;
   }
 
   a {
