--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -3,6 +3,7 @@
 
 .main-container {
   margin: 5% 10%;
+  height: 100vh;
 
   .error-loading {
     display: flex;
@@ -11,11 +12,11 @@
   }
 }
 
-.home, .message {
+.home, .message, .donors {
   height: 100vh;
 }
 
-.donors, .donate {
+.donate, .support {
   height: 100%;
 }
 
