--- a/src/Components/SupportLink/SupportLink.scss
+++ b/src/Components/SupportLink/SupportLink.scss
@@ -22,7 +22,8 @@
     @include m.buttonShadow();
 
     &:hover {
-      @include m.buttonHover(1.2em)
+      // @include m.buttonHover(2em)
+      background-color: v.$orange;
     }
   }
 }
