Update colors throughout to achieve 100% accessibility

--- a/src/Components/NotFound/NotFound.scss
+++ b/src/Components/NotFound/NotFound.scss
@@ -6,7 +6,7 @@
   text-align: center;
 
   .error-button {
-    @include m.button(v.$orange, v.$offBlack, v.$bodyFont);
+    @include m.button(v.$brightOrange, v.$offBlack, v.$bodyFont);
     @include m.buttonShadow();
     margin: 5% 0%;
   
