--- a/src/Components/Styles/_variables.scss
+++ b/src/Components/Styles/_variables.scss
@@ -6,9 +6,10 @@ $bodyFont: 'Thasadith', sans-serif;
 $offWhite: #F2F2F2;
 $offBlack: #020202;
 $darkTeal: #03738C;
-$orange: #F28F38;
+$brightOrange: #db7d2b;
+$orange: #d26709;
 $darkBlue: #0D2C40;
-$lightTeal: #049CBE;
-$salmon: #D95A4E;
+$lightTeal: #0582a1;
+$salmon: #cb483b;
 $lightGray: #d5d5d5;
 $mediumGray: #7B7B7B;
