--- a/src/Components/DonorCard/DonorCard.scss
+++ b/src/Components/DonorCard/DonorCard.scss
@@ -8,7 +8,7 @@
   margin: 2% 0;
 
   .contact-card {
-    background-color: v.$orange;
+    background-color: v.$brightOrange;
     padding: 10%;
     border-radius: 1.5em;
     @include m.buttonShadow();
