--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -3,7 +3,7 @@
 
 .main-container {
   margin: 5% 10%;
-  height: 100vh;
+  // height: 100vh;
 
   .error-loading {
     display: flex;
@@ -12,11 +12,11 @@
   }
 }
 
-.home, .message, .donors {
+.home, .message {
   height: 100vh;
 }
 
-.donate, .support {
+.donate, .support, .donors {
   height: 100%;
 }
 
