--- a/src/Components/HomePage/HomePage.scss
+++ b/src/Components/HomePage/HomePage.scss
@@ -3,12 +3,15 @@
 
 .main-container {
   margin: 5% 10%;
-  // height: 100vh;
 
   .error-loading {
     display: flex;
     justify-content: center;
     margin: 5%;
+  }
+
+  .bold {
+    color: v.$darkTeal;
   }
 }
 
