--- a/src/Components/MobileMenu/MobileMenu.scss
+++ b/src/Components/MobileMenu/MobileMenu.scss
@@ -62,3 +62,15 @@
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  .bm-burger-button {
+    top: 34px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .bm-burger-button {
+    top: 54px;
+  }
+}
