Media query updates for mobile and tablet views

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -67,8 +67,7 @@ a:focus { text-decoration: none; }
 }
 
 @media (min-width: 1025px) and (max-width: 1280px) {
-  .desktop-hidden {
+  .mobile-hidden {
     display: none;
   }
 }
-
