--- a/src/Components/DonorCard/DonorCard.scss
+++ b/src/Components/DonorCard/DonorCard.scss
@@ -15,9 +15,15 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 1025px) and (max-width: 1280px) {
   .contact-grid {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .contact-grid {
+    grid-template-columns: 1fr 1fr;
   }
 }
 
