--- a/src/Components/MilkRequestForm/MilkRequestForm.scss
+++ b/src/Components/MilkRequestForm/MilkRequestForm.scss
@@ -85,18 +85,49 @@
   }
 }
 
-  @media (min-width: 768px) and (max-width: 1024px) {
-    .main-container {
-      form {
-        width: 100%;
-      }
-    }
+@media (min-width: 768px) and (max-width: 1024px) {
+  header {
+    padding: 2%;
   }
 
-  @media (min-width: 320px) and (max-width: 480px) {
-    .main-container {
-      form {
-        width: 100%;
+  .main-container {
+    form {
+      width: 100%;
+      height: 100%;
+      
+      .button {
+        margin: 4%;
       }
     }
   }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  header {
+    padding: 2%;
+  }
+
+  .main-container {
+    form {
+      width: 100%;
+      .button {
+        margin: 4%;
+      }
+    }
+  }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+  header {
+    padding: 2%;
+  }
+  
+  .main-container {
+    form {
+      width: 100%;
+      .button {
+        margin: 4%;
+      }
+    }
+  }
+}
