--- a/src/Components/MobileMenu/MobileMenu.scss
+++ b/src/Components/MobileMenu/MobileMenu.scss
@@ -63,14 +63,38 @@
   background: rgba(0, 0, 0, 0.3);
 }
 
-@media (min-width: 481px) and (max-width: 1024px) {
+@media (min-width: 1025px) and (max-width: 1280px) {
   .bm-burger-button {
-    top: 34px;
+    top: 60px;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
   .bm-burger-button {
     top: 54px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .bm-burger-button {
+    top: 56px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 767px) and (orientation: landscape){
+  .bm-burger-button {
+    top: 36px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .bm-burger-button {
+    top: 36px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .bm-burger-button {
+    top: 33px;
   }
 }
