--- a/src/Components/MilkRequestForm/MilkRequestForm.scss
+++ b/src/Components/MilkRequestForm/MilkRequestForm.scss
@@ -110,6 +110,8 @@
   .main-container {
     form {
       width: 100%;
+      height: 100%;
+      
       .button {
         margin: 4%;
       }
@@ -125,6 +127,8 @@
   .main-container {
     form {
       width: 100%;
+      height: 100%;
+
       .button {
         margin: 4%;
       }
