--- a/src/Components/MilkRequestForm/MilkRequestForm.scss
+++ b/src/Components/MilkRequestForm/MilkRequestForm.scss
@@ -85,6 +85,18 @@
   }
 }
 
+@media (min-width: 1281px) {
+  .main-container {
+    form {
+      height: 100%;
+      
+      .button {
+        margin: 4%;
+      }
+    }
+  }
+}
+
 @media (min-width: 768px) and (max-width: 1024px) {
   header {
     padding: 2%;
@@ -102,7 +114,7 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
   header {
     padding: 2%;
   }
@@ -129,6 +141,23 @@
       width: 100%;
       height: 100%;
 
+      .button {
+        margin: 4%;
+      }
+    }
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  header {
+    padding: 2%;
+  }
+
+  .main-container {
+    form {
+      width: 100%;
+      height: 100%;
+      
       .button {
         margin: 4%;
       }
